welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
if ((a>=10 && a<=20)  || (b>=10 && b<=20))
{
	return max1020=Math.max(a,b);
}

if ((a<=10 || a>=20) && (b<=10 || b>=20))
{
	return 0;
}
}